--- a/app/src/main/res/layout/editar_perfil.xml
+++ b/app/src/main/res/layout/editar_perfil.xml
@@ -20,62 +20,56 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="48dp"
         android:text="Nombre: "
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fotoUsuario" />
 
     <TextView
-        android:id="@+id/txtNombreUsuario"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="64dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-    <TextView
         android:id="@+id/textView6"
         android:layout_width="63dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="48dp"
         android:text="Email:"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/txtNombreUsuario" />
-
-    <TextView
-        android:id="@+id/txtMailUsuario"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="64dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintTop_toBottomOf="@+id/txtNombreEditar" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="Fecha creación:"
+        android:layout_marginTop="48dp"
+        android:text="Nueva Contraseña:"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/txtMailUsuario" />
+        app:layout_constraintTop_toBottomOf="@+id/divider2" />
 
-    <TextView
-        android:id="@+id/txtFechaUsuario"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="64dp"
-        app:layout_constraintEnd_toEndOf="parent"
+    <EditText
+        android:id="@+id/txtNombreEditar"
+        android:layout_width="293dp"
+        android:layout_height="41dp"
+        android:ems="10"
+        android:inputType="text"
+        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <EditText
+        android:id="@+id/txtMailEditar"
+        android:layout_width="293dp"
+        android:layout_height="41dp"
+        android:ems="10"
+        android:inputType="text"
+        app:layout_constraintStart_toStartOf="@+id/textView6"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+    <EditText
+        android:id="@+id/txtContrasenyaEditar"
+        android:layout_width="293dp"
+        android:layout_height="41dp"
+        android:ems="10"
+        android:inputType="text"
         app:layout_constraintStart_toStartOf="@+id/textView8"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
@@ -83,37 +77,36 @@
         android:id="@+id/divider"
         android:layout_width="0dp"
         android:layout_height="2dp"
-        android:layout_marginTop="20dp"
         android:background="@color/colorTabs"
-        app:layout_constraintEnd_toEndOf="@+id/txtNombreUsuario"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/txtNombreUsuario" />
+        app:layout_constraintEnd_toEndOf="@+id/txtNombreEditar"
+        app:layout_constraintStart_toStartOf="@+id/txtNombreEditar"
+        app:layout_constraintTop_toBottomOf="@+id/txtNombreEditar" />
 
     <View
         android:id="@+id/divider2"
         android:layout_width="0dp"
         android:layout_height="2dp"
-        android:layout_marginTop="20dp"
         android:background="@color/colorTabs"
-        app:layout_constraintEnd_toEndOf="@+id/txtMailUsuario"
-        app:layout_constraintStart_toStartOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/txtMailUsuario" />
+        app:layout_constraintEnd_toEndOf="@+id/txtMailEditar"
+        app:layout_constraintStart_toStartOf="@+id/txtMailEditar"
+        app:layout_constraintTop_toBottomOf="@+id/txtMailEditar"
+        tools:layout_editor_absoluteY="395dp" />
 
     <View
         android:id="@+id/divider3"
         android:layout_width="0dp"
         android:layout_height="2dp"
-        android:layout_marginTop="20dp"
         android:background="@color/colorTabs"
-        app:layout_constraintEnd_toEndOf="@+id/txtFechaUsuario"
-        app:layout_constraintStart_toStartOf="@+id/textView8"
-        app:layout_constraintTop_toBottomOf="@+id/txtFechaUsuario" />
+        app:layout_constraintEnd_toEndOf="@+id/txtContrasenyaEditar"
+        app:layout_constraintStart_toStartOf="@+id/txtContrasenyaEditar"
+        app:layout_constraintTop_toBottomOf="@+id/txtContrasenyaEditar"
+        tools:layout_editor_absoluteY="510dp" />
 
     <Button
-        android:id="@+id/btnEditar"
+        android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Editar"
+        android:text="Guardar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
