--- a/app/src/main/res/layout/mapa.xml
+++ b/app/src/main/res/layout/mapa.xml
@@ -15,4 +15,82 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnfcentral"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="575dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_mylocation"
+        app:backgroundTint="@color/colorTabs"
+        />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnfmapa"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="false"
+        android:visibility="invisible"
+        android:onClick="abrirMapa"
+        app:layout_constraintBottom_toTopOf="@+id/btnfcentral"
+        app:layout_constraintEnd_toStartOf="@+id/btnfcentral"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btnfcentral"
+        app:srcCompat="@android:drawable/ic_menu_mapmode"
+        app:backgroundTint="@android:color/darker_gray"
+        />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnftabs"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="500dp"
+        android:layout_marginEnd="43dp"
+        android:clickable="false"
+        android:visibility="invisible"
+        android:onClick="abrirTabs"
+        app:layout_constraintBottom_toTopOf="@+id/btnfcentral"
+        app:layout_constraintEnd_toEndOf="@+id/btnfcentral"
+        app:layout_constraintStart_toEndOf="@+id/btnfmapa"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@android:drawable/ic_menu_my_calendar"
+        app:backgroundTint="@color/colorTabs"
+        />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnfacercade"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="500dp"
+        android:layout_marginEnd="13dp"
+        android:clickable="false"
+        android:visibility="invisible"
+        android:onClick="abrirAcercaDe"
+        app:layout_constraintBottom_toTopOf="@+id/btnfcentral"
+        app:layout_constraintEnd_toStartOf="@+id/btnfinvitar"
+        app:layout_constraintStart_toEndOf="@+id/btnfcentral"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_dialog_info"
+        app:backgroundTint="@color/colorTabs"
+        />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnfinvitar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="false"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/btnfcentral"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnfcentral"
+        app:layout_constraintTop_toTopOf="@+id/btnfcentral"
+        app:srcCompat="@android:drawable/btn_star"
+        app:backgroundTint="@color/colorTabs"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
