--- a/app/src/main/res/layout/editar_perfil.xml
+++ b/app/src/main/res/layout/editar_perfil.xml
@@ -103,7 +103,7 @@
         tools:layout_editor_absoluteY="510dp" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnGuardar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Guardar"
