--- a/app/src/main/res/layout/registro.xml
+++ b/app/src/main/res/layout/registro.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Registro">
+    tools:context=".Registro"
+    android:background="@drawable/fondoapp">
 
     <EditText
         android:id="@+id/txtApellidos"
@@ -90,12 +91,13 @@
 
     <Button
         android:id="@+id/btContinuar"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="148dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/btn_aceptar"
         android:text="Continuar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtContraseña" />
+        app:layout_constraintEnd_toEndOf="@+id/txtContrasenya"
+        app:layout_constraintStart_toStartOf="@+id/txtContrasenya"
+        app:layout_constraintTop_toBottomOf="@+id/txtContrasenya" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
