--- a/app/src/main/res/layout/activity_introductory.xml
+++ b/app/src/main/res/layout/activity_introductory.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="1300dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/degradado2"
+        android:src="@drawable/fondoapp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
