--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <style name="temaAplicacion" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="android:typeface">serif</item>
@@ -7,7 +7,6 @@
         <item name="colorPrimary">#54B600</item>
         <item name="colorSecondary">#FF88EE</item>
         <item name="colorAccent">#FFFFFF</item>
-        <item name="colorButtonNormal">#CFAB63</item>
-
+        <item name="colorButtonNormal">#0764B5</item>
     </style>
 </resources>
