Notificacion y Permiso Mapa

--- a/app/src/main/res/layout/editar_perfil.xml
+++ b/app/src/main/res/layout/editar_perfil.xml
@@ -104,7 +104,7 @@
         tools:layout_editor_absoluteY="510dp" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnGuardar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/btn_aceptar"
