--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
 
     <color name="colorTabs">#418E00</color>
     <color name="cancelar">#D31B21</color>
+    <color name="azul">#0764B5</color>
 </resources>
