--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,7 +94,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
         android:clickable="false"
-        android:onClick="abrirInvitar"
+        android:onClick="abrirMonedero"
         android:visibility="invisible"
         app:backgroundTint="@color/colorTabs"
         app:layout_constraintBottom_toTopOf="@+id/btnfcentral"
