--- a/app/src/main/res/layout/mapa.xml
+++ b/app/src/main/res/layout/mapa.xml
@@ -84,7 +84,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="false"
-        android:onClick="abrirInvitar"
+        android:onClick="abrirMonedero"
         android:visibility="invisible"
         app:backgroundTint="@color/colorTabs"
         app:layout_constraintBottom_toTopOf="@+id/btnfcentral"
