Subir imagen de perfil de ususario

--- a/app/src/main/res/layout/editar_perfil.xml
+++ b/app/src/main/res/layout/editar_perfil.xml
@@ -115,4 +115,12 @@
         app:layout_constraintStart_toStartOf="@+id/txtContrasenyaEditar"
         app:layout_constraintTop_toBottomOf="@+id/divider3" />
 
+    <ImageButton
+        android:id="@+id/btnEditarImagen"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:background="@drawable/editarpng"
+        app:layout_constraintBottom_toBottomOf="@+id/fotoUsuario"
+        app:layout_constraintEnd_toEndOf="@+id/fotoUsuario" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
