--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="android:textColor">#000000</item>
         <item name="colorPrimary">#54B600</item>
         <item name="colorSecondary">#FF88EE</item>
-        <item name="colorAccent">#FFFFFF</item>
+        <item name="colorAccent">#0764B5</item>
         <item name="colorButtonNormal">#0764B5</item>
 
     </style>
