--- a/app/src/main/res/layout/monedero.xml
+++ b/app/src/main/res/layout/monedero.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/fondoapp">
 
     <TextView
         android:id="@+id/txt_Monedero"
@@ -19,10 +20,10 @@
         app:layout_constraintVertical_bias="0.913" />
 
     <TextView
-        android:id="@+id/textView27"
+        android:id="@+id/txtSaldo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="100€"
+        android:text="100"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/divider4"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +44,7 @@
         app:layout_constraintVertical_bias="0.4" />
 
     <TextView
-        android:id="@+id/txt_Total"
+        android:id="@+id/textview_Total"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Total:"
@@ -56,15 +57,15 @@
         app:layout_constraintVertical_bias="0.917" />
 
     <TextView
-        android:id="@+id/textView30"
+        android:id="@+id/txtTotal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="100.32€"
+        android:text="100.32"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/divider6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.704"
-        app:layout_constraintStart_toEndOf="@+id/txt_Total"
+        app:layout_constraintStart_toEndOf="@+id/textview_Total"
         app:layout_constraintTop_toBottomOf="@+id/divider5"
         app:layout_constraintVertical_bias="0.913" />
 
@@ -81,7 +82,7 @@
         app:layout_constraintVertical_bias="0.435" />
 
     <TextView
-        android:id="@+id/txt_Puntos"
+        android:id="@+id/textview_Puntos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Puntos acumulados:"
@@ -94,15 +95,15 @@
         app:layout_constraintVertical_bias="0.288" />
 
     <TextView
-        android:id="@+id/textView28"
+        android:id="@+id/txtPuntos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="154"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView29"
+        app:layout_constraintBottom_toTopOf="@+id/txtPuntosDinero"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.295"
-        app:layout_constraintStart_toEndOf="@+id/txt_Puntos"
+        app:layout_constraintStart_toEndOf="@+id/textview_Puntos"
         app:layout_constraintTop_toBottomOf="@+id/divider4"
         app:layout_constraintVertical_bias="0.478" />
 
@@ -111,12 +112,14 @@
         android:layout_width="199dp"
         android:layout_height="46dp"
         android:background="@drawable/btn_aceptar"
+        android:onClick="abrirInvitar"
         android:text="Conseguir puntos"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/divider5"
-        app:layout_constraintEnd_toStartOf="@+id/textView29"
+        app:layout_constraintEnd_toStartOf="@+id/txtPuntosDinero"
         app:layout_constraintHorizontal_bias="0.348"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_Puntos"
+        app:layout_constraintTop_toBottomOf="@+id/textview_Puntos"
         app:layout_constraintVertical_bias="0.451" />
 
     <View
@@ -131,16 +134,54 @@
         app:layout_constraintVertical_bias="0.606" />
 
     <TextView
-        android:id="@+id/textView29"
+        android:id="@+id/txtPuntosDinero"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0.32€"
+        android:text="0.32"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/btnPuntos"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.734"
+        app:layout_constraintHorizontal_bias="0.717"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btnPuntos"
-        app:layout_constraintVertical_bias="0.62" />
+        app:layout_constraintVertical_bias="0.631" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="€"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/txtSaldo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.606"
+        app:layout_constraintStart_toEndOf="@+id/txtSaldo"
+        app:layout_constraintTop_toTopOf="@+id/txtSaldo"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/textView19"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="€"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/txtPuntosDinero"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.902"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/txtPuntosDinero" />
+
+    <TextView
+        android:id="@+id/textView27"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="€"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/txtTotal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.434"
+        app:layout_constraintStart_toEndOf="@+id/txtTotal"
+        app:layout_constraintTop_toTopOf="@+id/txtTotal"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
