--- a/app/src/main/res/layout/fragment_pestana3.xml
+++ b/app/src/main/res/layout/fragment_pestana3.xml
@@ -9,7 +9,7 @@
     tools:context=".Pestana3Fragment">
 
     <Button
-        android:id="@+id/btn_3"
+        android:id="@+id/botonViajes"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
