--- a/app/src/main/res/layout/monedero.xml
+++ b/app/src/main/res/layout/monedero.xml
@@ -64,10 +64,10 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/divider6"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.704"
+        app:layout_constraintHorizontal_bias="0.698"
         app:layout_constraintStart_toEndOf="@+id/textview_Total"
         app:layout_constraintTop_toBottomOf="@+id/divider5"
-        app:layout_constraintVertical_bias="0.913" />
+        app:layout_constraintVertical_bias="0.917" />
 
     <View
         android:id="@+id/divider6"
@@ -102,10 +102,9 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/txtPuntosDinero"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.295"
+        app:layout_constraintHorizontal_bias="0.308"
         app:layout_constraintStart_toEndOf="@+id/textview_Puntos"
-        app:layout_constraintTop_toBottomOf="@+id/divider4"
-        app:layout_constraintVertical_bias="0.478" />
+        app:layout_constraintTop_toBottomOf="@+id/divider4" />
 
     <Button
         android:id="@+id/btnPuntos"
